# win-app-switcher

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.example.toml
.cargo/: config.toml
.github/workflows/: release.yml
plans/: auto-update.md  manual-tests.md  rewrite-plan.html
scripts/: install-startup-shortcut.cmd  run-debug-build.cmd  uninstall.cmd
src/: apps.rs  config.rs  hook.rs  main.rs  ui.rs  update.rs
